[wip] superinstructions & common instructions